feat: use linaria instead of styled-component to prevent flicker

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "linaria": "^4.1.15",
     "next": "13.2.4",
+    "next-linaria": "^0.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
