feat: add serverless-mysql to interact with db

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "13.2.4",
     "next-linaria": "^0.11.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "serverless-mysql": "^1.5.4"
   },
   "devDependencies": {
     "@types/node": "^18.15.6",
