feat: add google login using next-auth

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "linaria": "^4.1.15",
     "next": "13.2.4",
+    "next-auth": "^4.20.1",
     "next-linaria": "^0.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
