--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "linaria": "^4.1.15",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
