--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "classnames": "^2.3.2",
     "linaria": "^4.1.15",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
