--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/theme-one-dark": "^6.1.1",
+    "@uiw/react-codemirror": "^4.19.11",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "linaria": "^4.1.15",
