--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/lang-markdown": "^6.1.0",
+    "@codemirror/language-data": "^6.2.0",
     "@codemirror/theme-one-dark": "^6.1.1",
+    "@uiw/codemirror-theme-atomone": "^4.19.11",
     "@uiw/react-codemirror": "^4.19.11",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
