--- a/package.json
+++ b/package.json
@@ -9,17 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@codemirror/commands": "^0.19.1",
-    "@codemirror/gutter": "^0.19.0",
-    "@codemirror/highlight": "^0.19.1",
-    "@codemirror/history": "^0.19.0",
-    "@codemirror/lang-javascript": "^0.19.1",
-    "@codemirror/lang-markdown": "^0.19.1",
-    "@codemirror/language": "^0.19.2",
-    "@codemirror/language-data": "^0.19.0",
-    "@codemirror/matchbrackets": "^0.19.1",
-    "@codemirror/state": "^0.19.0",
-    "@codemirror/theme-one-dark": "^0.19.0",
+    "@codemirror/theme-one-dark": "^6.1.1",
+    "@uiw/react-codemirror": "^4.19.11",
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "linaria": "^4.1.15",
