--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "axios": "^1.3.4",
     "classnames": "^2.3.2",
     "linaria": "^4.1.15",
+    "lodash": "^4.17.21",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "next-linaria": "^0.11.0",
     "react": "18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.6",
     "react-syntax-highlighter": "^15.5.0",
@@ -28,6 +31,7 @@
     "serverless-mysql": "^1.5.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.192",
     "@types/node": "^18.15.6",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
