--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "vercel-build": "npx prisma generate && npx prisma migrate deploy && next build"
   },
   "dependencies": {
     "@codemirror/lang-markdown": "^6.1.0",
     "@codemirror/language-data": "^6.2.0",
     "@codemirror/theme-one-dark": "^6.1.1",
+    "@prisma/client": "^6.0.1",
+    "@prisma/extension-accelerate": "^1.2.1",
     "@uiw/codemirror-theme-atomone": "^4.19.11",
     "@uiw/react-codemirror": "^4.19.11",
     "axios": "^1.3.4",
