--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
-    "remark-gfm": "^3.0.1",
-    "serverless-mysql": "^1.5.4"
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.192",
